sistemate interfacce grafiche e iniziata implementazione della darkmode

--- a/app/src/main/res/layout/activity_crea_talk.xml
+++ b/app/src/main/res/layout/activity_crea_talk.xml
@@ -16,6 +16,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/ET_testoTalk"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,42 +26,66 @@
         android:layout_height="300dp"
         android:autofillHints=""
         android:background="@drawable/textbox_style"
-        android:drawableTint="@color/orange_light"
         android:hint="@string/talkHint"
         android:inputType="textLongMessage|textMultiLine"
         android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/ET_linkSource"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/TV_newPost" />
 
-    <EditText
-        android:id="@+id/ET_linkSource"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="0dp"
-        android:layout_height="50dp"
-        android:autofillHints=""
-        android:background="@drawable/textbox_style"
-        android:drawableTint="@color/orange_light"
-        android:hint="@string/linkHint"
-        android:inputType="textLongMessage|textMultiLine"
-        android:textAlignment="center"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/B_UploadPost"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ET_testoTalk" />
+        app:layout_constraintTop_toBottomOf="@+id/ET_testoTalk">
+
+        <EditText
+            android:id="@+id/ET_linkSource"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="8dp"
+            android:autofillHints=""
+            android:background="@drawable/textbox_style"
+            android:hint="@string/linkHint"
+            android:inputType="textLongMessage"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:backgroundTint="@null"
+            android:background="@drawable/button_style_gray"
+            android:text="@string/inserImageHere"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/B_UploadPost"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_style"
+        android:background="@drawable/button_style_orange"
         android:onClick="createNewTalk"
         android:text="@string/submit"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ET_linkSource" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
