--- a/app/src/main/res/layout/activity_crea_talk.xml
+++ b/app/src/main/res/layout/activity_crea_talk.xml
@@ -29,6 +29,7 @@
         android:hint="@string/talkHint"
         android:inputType="textLongMessage|textMultiLine"
         android:textAlignment="center"
+        android:textColor="@color/default_primary_text"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -55,6 +56,7 @@
             android:hint="@string/linkHint"
             android:inputType="textLongMessage"
             android:textAlignment="center"
+            android:textColor="@color/default_primary_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/button2"
             app:layout_constraintStart_toStartOf="parent"
