--- a/app/src/main/res/layout/row_talk.xml
+++ b/app/src/main/res/layout/row_talk.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/tNickanme"
-                android:textColor="@color/black"
+                android:textColor="@color/default_primary_text"
                 android:textSize="16sp" />
 
             <TextView
@@ -46,7 +46,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tContent" />
+                android:text="@string/tContent"
+                android:textColor="@color/default_secondary_text" />
 
             <ImageView
                 android:id="@+id/IV_content"
