--- a/app/src/main/res/layout/row_talk.xml
+++ b/app/src/main/res/layout/row_talk.xml
@@ -23,7 +23,7 @@
             tools:ignore="ContentDescription" />
 
         <LinearLayout
-            android:id="@+id/linearLayout4"
+            android:id="@+id/lineaLayoutUserData"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -65,14 +65,15 @@
 
         <ImageView
             android:id="@+id/IV_content"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+            app:layout_constraintTop_toBottomOf="@+id/lineaLayoutUserData"
             app:layout_constraintVertical_bias="0.0"
             tools:ignore="ContentDescription" />
 
