Implementata rimozione talk

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="bin">#FFFFFF</color>
     <color name="dark_background">#FF121212</color>
     <color name="orange_light">#FFFFBB33</color>
     <color name="orange_dark">#FFFF8800</color>
