--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,13 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="gray">#808080</color>
+    <color name="gray">#FF808080</color>
+    <color name="bin">#FF000000</color>
     <color name="dark_background">#FF121212</color>
     <color name="orange_light">#FFFFBB33</color>
     <color name="orange_dark">#FFFF8800</color>
     <color name="default_link">#FF1A0DAB</color>
-    <color name="yellow_textarea">#33FFBB33</color>
+    <color name="yellow_textarea">#674E1B</color>
     <color name="default_primary_text">#FF000000</color>
     <color name="default_secondary_text">#808080</color>
 </resources>
