sistemata interfaccia grafica

--- a/app/src/main/res/layout/activity_crea_talk.xml
+++ b/app/src/main/res/layout/activity_crea_talk.xml
@@ -11,7 +11,7 @@
         android:id="@+id/TV_newPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/newPost"
+        android:text="@string/new_post"
         android:textColor="@color/orange_light"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/ET_testoTalk"
@@ -26,7 +26,7 @@
         android:layout_height="300dp"
         android:autofillHints=""
         android:background="@drawable/textbox_style"
-        android:hint="@string/talkHint"
+        android:hint="@string/talk_hint"
         android:inputType="textLongMessage|textMultiLine"
         android:textAlignment="center"
         android:textColor="@color/default_primary_text"
@@ -53,7 +53,7 @@
             android:layout_marginEnd="8dp"
             android:autofillHints=""
             android:background="@drawable/textbox_style"
-            android:hint="@string/linkHint"
+            android:hint="@string/link_hint"
             android:inputType="textLongMessage"
             android:textAlignment="center"
             android:textColor="@color/default_primary_text"
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             app:backgroundTint="@null"
             android:background="@drawable/button_style_gray"
-            android:text="@string/inserImageHere"
+            android:text="@string/insert_image_here"
             android:textSize="12sp"
             android:onClick="getPicture"
             app:layout_constraintBottom_toBottomOf="parent"
