--- a/app/src/main/res/layout/row_talk.xml
+++ b/app/src/main/res/layout/row_talk.xml
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tNickanme"
+                android:text="@string/template_nickname"
                 android:textColor="@color/default_primary_text"
                 android:textSize="16sp" />
 
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tContent"
+                android:text="@string/template_content"
                 android:textColor="@color/default_secondary_text" />
 
             <TextView
