--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/immagineLogin"
         android:layout_width="240dp"
         android:layout_height="240dp"
-        app:layout_constraintBottom_toTopOf="@+id/TF_EmailLogin"
+        app:layout_constraintBottom_toTopOf="@+id/TIL_EmailLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,31 +19,51 @@
         app:srcCompat="@mipmap/ic_launcher"
         tools:ignore="ContentDescription" />
 
-    <EditText
-        android:id="@+id/TF_EmailLogin"
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/TIL_EmailLogin"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/email_address"
-        android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/TF_PasswordLogin"
+        app:errorEnabled="true"
+        app:layout_constraintBottom_toTopOf="@+id/TIL_PasswordLogin"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/immagineLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/immagineLogin">
 
-    <EditText
-        android:id="@+id/TF_PasswordLogin"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/TF_EmailLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/TIL_PasswordLogin"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
+        app:endIconMode="password_toggle"
         android:layout_height="wrap_content"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/login_password"
-        android:inputType="textPassword"
+        android:hint="@string/password"
+        app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/b_login"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TF_EmailLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/TIL_EmailLogin">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/TF_PasswordLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <android.widget.Button
         android:id="@+id/b_login"
@@ -57,7 +77,7 @@
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TF_PasswordLogin" />
+        app:layout_constraintTop_toBottomOf="@+id/TIL_PasswordLogin" />
 
     <LinearLayout
         android:id="@+id/linearLayout2"
@@ -87,5 +107,6 @@
             android:textColor="@color/orange_light"
             android:textSize="14sp" />
     </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
